test/fixtures/compile/class/class.field.mut.nstt.wt_n.nd.error
SyntaxError: Expecting "=" but got "NewLine" (/Users/baptiste/Development/Projects/Kaoscript/kaoscript/test/fixtures/compile/class/class.field.mut.nstt.wt_n.nd.ks:3:6)