test/fixtures/compile/class/class.field.mut.nstt.nt.nd.set_n.ks
class Foobar {
	private {
		@x
	}
	reset() {
		@x = null
	}
}